--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,27 @@ build/
 ### VS Code ###
 .vscode/
 
+# Application properties files
+**/application.properties
+**/application-*.properties
+**/application.yml
+**/application-*.yml
+
+# Environment files
+.env
+.env.*
+
+# Secret key files
+*.jks
+*.keystore
+*.p12
+*.pem
+*.key
+
+# Configuration files that may contain secrets
+config.json
+secrets.json
+
 # Logs
 logs
 *.log
@@ -41,6 +62,7 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
+# Node
 node_modules
 dist
 dist-ssr
@@ -57,4 +79,12 @@ dist-ssr
 *.sln
 *.sw?
 
-.gitignore
+# Maven wrapper
+.mvn/wrapper/maven-wrapper.jar
+
+# Gradle wrapper
+gradle/wrapper/gradle-wrapper.jar
+
+# Other potential secret files
+*.secret
+*.credentials
